--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "e-commerce",
   "version": "0.1.0",
+  "main": "index.js",
+  "homepage": "https://davidflr1.github.io/course-eCommerce/",
   "private": true,
   "dependencies": {
     "@chec/commerce.js": "^2.3.1",
@@ -11,6 +13,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.2",
@@ -18,7 +21,6 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
-  "homepage": "https://davidflr1.github.io/course-eCommerce/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
